# fightingtinder

./: .env.fake  .gitignore  Cargo.toml  README.md  redis.conf
migrations/2020-10-31-113911_create_user/: up.sql
migrations/2020-11-07-123134_swipes_register/: down.sql  up.sql
migrations/2020-11-07-125040_matches_register/: up.sql
migrations/2020-11-07-131530_add_lat_long/: down.sql  up.sql
migrations/2020-11-12-223832_store_user_information/: down.sql  up.sql
migrations/2020-11-12-223832_store_user_picture/: down.sql  up.sql
src/: auth.rs  db.rs  lib.rs  main.rs  schema.rs
src/paths/: matches.rs  mod.rs  swipe.rs  users.rs
