[package]
name = "fightingtinder"
version = "0.1.0"
authors = ["Joseph Cheverton-Wynne <jchevertonwynne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
bcrypt = "0.9.0"
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
postgres = "0.18.1"
serde = "1.0.117"
serde_json = "1.0.59"
sha2 = "0.9.1"
