[package]
name = "fightingtinder"
version = "0.1.0"
authors = ["Joseph Cheverton-Wynne <jchevertonwynne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-session = "0.4.0"
bcrypt = "0.9.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
futures-util = "0.3.7"
postgres = "0.18.1"
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

